semantic and non-semantic.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>My First GitHub Project</title>
-</a>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> MY FIRST WEBPAGE </title>
+</head>
 <body>
-<h1>Hello Git & GitHub</h1>
-<p>Demo project pushed from VS Code </p>
+<!-- <H1>WELCOME T0 HTML</H1>
+<H2>HII</H2>
+<H3>ABES GAZIABAD</H3>
+<H4>MYSELF HARSHIT</H4>
+<H5>CSE</H5>
+<H6>HELLO</H6>     -->
+<!-- <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad doloribus dolore neque commodi doloremque ipsa a dolor, accusantium laboriosam delectus cum ullam repudiandae eveniet totam voluptatibus quae odio similique, minima deleniti voluptates illo. Aliquid necessitatibus magnam accusantium veritatis qui numquam molestias asperiores vel fuga quae reiciendis, hic placeat ab nobis voluptates tempora reprehenderit! Saepe aliquam assumenda dolorem esse deserunt corrupti quia, accusamus fuga vero! Fugiat, voluptas veritatis velit repudiandae sapiente enim inventore consectetur amet aspernatur dolores impedit aliquam a. Quod animi reiciendis voluptate cupiditate autem quibusdam. Quas magni corporis, laborum nemo quaerat est repellat. Quasi tempore dolore consequatur provident veritatis, ab soluta ipsam iusto quaerat! Architecto, nam voluptate. Dicta nemo consectetur explicabo quisquam neque atque quis nulla maxime obcaecati quo expedita saepe fugiat, vitae, temporibus cupiditate cumque dolore recusandae mollitia dolorum iure! Saepe iste dolore perspiciatis doloribus nobis reiciendis? Molestiae maiores molestias sequi unde mollitia, nesciunt ea tempora accusamus voluptatum praesentium et sed, ad doloremque fugit dignissimos debitis laudantium. Ex, velit obcaecati! Voluptas, maxime? Architecto maiores nam doloremque natus quod similique a voluptatem consequuntur. Quod quam, nam sint sequi ad dignissimos laboriosam dolorem accusantium sit alias doloribus fuga odit voluptates sunt eveniet at. Perferendis voluptas quos ut hic eius. Corporis sapiente cum ullam repudiandae molestias numquam, ab nam non, corrupti rerum quam cumque distinctio obcaecati rem aliquam iusto harum quia aperiam, laborum dolores animi saepe ut impedit. Porro voluptatem molestias ad debitis fuga voluptatibus amet praesentium quibusdam ipsam possimus excepturi dolore corrupti, obcaecati perspiciatis laborum ratione provident adipisci consequatur veritatis nobis. Iste eum perspiciatis esse praesentium, ratione dolor voluptatem ea, magnam inventore amet tempore, quae commodi. Perspiciatis enim exercitationem quod quisquam accusantium natus incidunt illum consequatur vel pariatur soluta debitis eius alias doloribus quos, rem a facere laborum ut dolores quasi esse ea! Veniam sint pariatur perspiciatis? Dolore porro cumque reiciendis animi, enim obcaecati, alias odio dolorum perspiciatis doloribus incidunt! Cupiditate illo modi vel saepe dicta porro voluptas laboriosam aliquid, ullam deserunt amet eius dolor nam provident voluptate fugiat, non natus dolore ipsum impedit optio assumenda. Nisi rem delectus autem optio eius, impedit ut cupiditate quasi atque natus odit, quos temporibus totam, dolorum maiores adipisci asperiores libero cum sint pariatur dolore recusandae molestias reprehenderit at? Aliquid repellendus totam odio vel ea nam, obcaecati quibusdam, saepe soluta deleniti maiores iste perferendis, quisquam quaerat! Quasi ratione nisi est temporibus atque vero at numquam voluptatem reiciendis! Provident praesentium excepturi itaque id veritatis at commodi quidem eius dolore assumenda numquam rem nisi, animi ducimus odio amet voluptatem. Et corporis voluptates voluptatum? Molestias enim, voluptas nihil libero optio ea amet quisquam beatae ipsum delectus temporibus sequi magnam, harum est illum numquam nesciunt quod excepturi alias aperiam quidem quis velit! Est reprehenderit itaque quod minima omnis eum dolor temporibus fuga architecto, ipsum, odio laborum aliquid ex vitae. Dicta voluptas totam asperiores officiis culpa adipisci ipsa enim debitis magnam unde laudantium autem ea maiores qui similique quaerat ad, accusantium pariatur at soluta? Amet culpa autem illum vero, animi, quos non distinctio rem maiores minus perspiciatis magni deserunt! ipsum dolor sit amet consectetur adipisicing elit. Rem error deleniti eos, molestias voluptate delectus maiores ad perspiciatis neque tenetur, sed commodi. Ducimus quis fugiat aspernatur nihil veniam atque odio.HUSDUCBE. IEJBNSUCJDJ DNUHDIC CJIJ</P> -->
+<a href="https://www.google.com">google </a>
+
+
 </body>
-</html> 
+</html>
