--- a/semantic and non-semantic.html
+++ b/semantic and non-semantic.html
@@ -18,6 +18,6 @@
     <aside><h2>this is aside</h2></aside>
     </main>
 
-    <footer><h3>this is footer</h3></footer>
+    <footer><h3>Harshit's website</h3></footer>
 </body>
 </html>
