--- a/text formatting.html
+++ b/text formatting.html
@@ -7,18 +7,81 @@
     <title>Document</title>
 </head>
 <body>
-    <b>hello</b>
+    <!-- <b>hello</b>
     <i>world</i>
     <U>UNDERLINE</U>
     <PRE>PREFORMED</PRE>
     <center>Abes Gaziabad</center>
    <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>Cum explicabo repudiandae illum ipsa voluptas alias laudantium <br>Obcaecati magnam vero sequi soluta, expedita sed laudantium, esse odit quod facilis laboriosam.</p>-->
-    <hr>
+    <!-- <hr>
     <span>hello</span>
     <br>
     <span>world</span>
     <hr>
     <font size="+2" color="#20FF08">Harshit singh</font>
     <EM>emphasis</EM>
+    <strong>strong</strong>
+    <strike>strike</strike>
+    <tt>teletype</tt>
+    <big>bif font</big>
+    <small>small font</small>
+    <p>H <sub>2</sub>0</p>
+    <p>x <sup>2</sup></p>
+    <mark>hello</mark>  -->
+
+
+
+    <!-- <H1>ENTITIES</H1>
+    <P><H1><B>TEXT FORMATTING EX</B></H1></P>
+    <br>
+    <P><B><h2>BOLD TEXT (using &lt; b &gt;)</h2></B></P>
+    <br>
+    <p><b><h2>Important text (using &lt; strong &gt;)</h2></b></p>
+    <br>
+    <p><i><h3>italic text (using &lt; i &gt;)</h3></i></p>
+    <br>
+    <p><i><h3>emphasized text (using&lt;em&gt;)</h3></i></p>
+    <br>
+    <p><u><h3>underlined text (using&lt;u&gt;)</h3></u></p>
+    <br>
+    <p><h3><mark>highlighted text (using&lt;mark&gt;)</mark></h3></p>
+    <br>
+    <p><small>small text (using&lt;small&gt;)</small></p>
+    <br>
+    <p><h2>H<sub>2</sub>O ? Subscript example</h2></p>
+    <br>
+    <p><h2>X <sup>2</sup> ? Superscript text</h2></p>
+    <br>
+    <p><del> text (using &lt;del&gt;)</del></p>
+    <br>
+    <p><h2><ins>inserted text (using&lt;ins&gt;)</ins></h2></p>
+    <br>
+    <p><h2>inline code (using&lt;code&gt;)</h2></p>
+    <br>
+    <p><h2><kbd>keyboard input (using&lt;kbd&gt;)</kbd></h2></p>
+    <br>
+    <p><blockquote cite="wwww.example.com">this ia a blockquote </blockquote></p> -->
+    
+    <p><h1><b>Special Characters & Entitiies</b></h1></p>
+    <br>
+    <p><h4>less than: &lt;</h4></p>
+    <br>
+    <p><h4>greater than: &gt;</h4></p>
+    <br>
+    <p><h4>Ampersand: &amp;</h4></p>
+    <br>
+    <p><h4>double quote:&quot;</h4></p>
+    <br>
+    <p><h4>copyright &copy;</h4></p>
+    <br>
+    <p><h4>Euro: &euro;50 </h4></p>
+    <br>
+    <p><h4>pound: &pound; 100</h4></p>
+    <br>
+    <p><h4>Indian ruppe: &#8377;10000</h4></p>
+
+
+
+
 </body>
 </html>
