--- a/text formatting.html
+++ b/text formatting.html
@@ -62,7 +62,7 @@
     <br>
     <p><blockquote cite="wwww.example.com">this ia a blockquote </blockquote></p> -->
     
-    <p><h1><b>Special Characters & Entitiies</b></h1></p>
+    <!-- <p><h1><b>Special Characters & Entitiies</b></h1></p>
     <br>
     <p><h4>less than: &lt;</h4></p>
     <br>
@@ -79,7 +79,7 @@
     <p><h4>pound: &pound; 100</h4></p>
     <br>
     <p><h4>Indian ruppe: &#8377;10000</h4></p>
-
+ -->
 
 
 
