--- a/Experiment-2.html
+++ b/Experiment-2.html
@@ -21,7 +21,7 @@
     <hr>
     <p>World News <br>
     Today's top healdine : Global leader meet to discuss climate change intiative</p>
-    <img src="bbcnews.jpg" alt="loading" width = "500px">
+    <img src="bbcnews.jpeg" alt="loading" width = "500px">
     <nav>
         
         <a href="index.html">Read more on BBC </a>
