--- a/CSS Unit/selectors.html
+++ b/CSS Unit/selectors.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-    h1{
-    color: aquamarine;
+    p{
+      /* color: aquamarine; */
     }
-      #para2{
-       color: turquoise;
-      } 
-      .para{
-        color: blue;
-      } 
-        
-        
+    div p{
+      color: blue;
+    }
+    #box p{
+      color: brown;
+    }
+    #box > p{
+      color: lawngreen;
+    }
+    #BOX ~ P{
+      color: peru;
+    }
+    #box + p{
+      color: tomato;
+    }
         </style>
 
 
@@ -23,11 +30,38 @@
 
 </head>
 <body>
-    <!-- CSS selectors are used to "find" (or select) the HTML elements you want to style. -->
+<div id="box">
+<p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum soluta temporibus, voluptatibus ratione maxime, praesentium aperiam aliquam ducimus atque quaerat ullam ea rem ipsam nam deserunt quo voluptate eligendi consectetur alias harum aspernatur quod eum accusamus ad. Vel ipsa delectus repudiandae nemo obcaecati, aliquid ipsum velit adipisci consequuntur hic ullam.
+</p>
+<table>
+  <tr>
+    <td>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem dignissimos animi, quia dicta in beatae quisquam praesentium magnam sint accusantium molestias velit error, totam nulla saepe doloremque voluptatibus maxime iure officiis! Eligendi nihil voluptatum accusantium facere? Recusandae, quae. Harum eligendi quidem incidunt. Vel, deserunt praesentium. At voluptate modi mollitia quisquam.
+      </p>
+    </td>
+  </tr>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsa quasi magni perferendis officiis maiores mollitia, excepturi accusantium dignissimos aliquam blanditiis natus sapiente quo molestias, incidunt assumenda? Nemo, rerum deleniti.
+  </p>
 
-    <h1>Hello Abes</h1>
-    <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit fugit ad aut, similique modi cum hic. Dignissimos corrupti, id, repudiandae autem veniam placeat laboriosam asperiores reiciendis quidem dicta, tenetur voluptas!</p>
-    <p id="para2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga consectetur praesentium officia corrupti nesciunt laboriosam. Illo debitis necessitatibus ipsa aliquid deserunt aspernatur amet, eius voluptates perferendis enim! Quod, tenetur numquam.</p>
-    <p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, nisi. Porro quae inventore aliquid aperiam illo sapiente alias dolorum excepturi saepe voluptates reiciendis suscipit voluptate, error cum, iusto debitis voluptatem?</p>
-</body>
+</table>
+</div>
+<h2>Hello ABES GHS
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, iure. Labore, deleniti temporibus. Quisquam accusantium non, illum molestiae numquam laborum enim modi blanditiis, est voluptas voluptatum quam quo necessitatibus minus.
+</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia veritatis necessitatibus dolorum soluta nulla eos consectetur aliquid magni ipsum sequi explicabo ab molestiae magnam recusandae eaque nisi rem, excepturi sed nesciunt, tenetur voluptatibus vitae. Delectus voluptatum itaque reprehenderit, laboriosam a sed, quae distinctio amet repudiandae eius consequatur repellendus laudantium autem quis consequuntur ullam rerum dolor dignissimos fugit. Rerum dicta iste eos deserunt, sint reiciendis id voluptatem eligendi ratione omnis cumque beatae ipsum harum, facere praesentium, tempora recusandae ut placeat corporis distinctio at expedita? Quae est eius, eligendi obcaecati ipsum impedit aperiam delectus doloribus aspernatur alias? Repellendus ut officiis porro dolore!</p>
+
+
+
+
+
+
+
+
+
+
+
+  </body>
 </html>
