--- a/CSS Unit/selectors.html
+++ b/CSS Unit/selectors.html
@@ -8,21 +8,39 @@
     p{
       /* color: aquamarine; */
     }
-    div p{
+    /* div p{
       color: blue;
-    }
-    #box p{
+    } */
+    /* #box p{
       color: brown;
-    }
-    #box > p{
+    } */
+    /* #box > p{
       color: lawngreen;
-    }
-    #BOX ~ P{
+    } */
+    /* #BOX ~ P{
       color: peru;
+    } */
+    
+    /* a:link{
+      text-decoration: none font size;
+    } */
+    /* a:hover{
+      color: aquamarine;
+    } */
+     ul li:nth-child(odd){
+      color: blue;
+     }
+     ul li:nth-child(even){
+      color: brown;
+     }
+     ul li::first-letter{
+      color: cornflowerblue ; font-size: 50px;
+     }
+     ul li::after{
+      content: "read more";
+     color: blue;
     }
-    #box + p{
-      color: tomato;
-    }
+    
         </style>
 
 
@@ -30,8 +48,8 @@
 
 </head>
 <body>
-<div id="box">
-<p>
+<!-- <div id="box"> -->
+<!-- <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum soluta temporibus, voluptatibus ratione maxime, praesentium aperiam aliquam ducimus atque quaerat ullam ea rem ipsam nam deserunt quo voluptate eligendi consectetur alias harum aspernatur quod eum accusamus ad. Vel ipsa delectus repudiandae nemo obcaecati, aliquid ipsum velit adipisci consequuntur hic ullam.
 </p>
 <table>
@@ -52,8 +70,17 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum soluta temporibus
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, iure. Labore, deleniti temporibus. Quisquam accusantium non, illum molestiae numquam laborum enim modi blanditiis, est voluptas voluptatum quam quo necessitatibus minus.
 </h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia veritatis necessitatibus dolorum soluta nulla eos consectetur aliquid magni ipsum sequi explicabo ab molestiae magnam recusandae eaque nisi rem, excepturi sed nesciunt, tenetur voluptatibus vitae. Delectus voluptatum itaque reprehenderit, laboriosam a sed, quae distinctio amet repudiandae eius consequatur repellendus laudantium autem quis consequuntur ullam rerum dolor dignissimos fugit. Rerum dicta iste eos deserunt, sint reiciendis id voluptatem eligendi ratione omnis cumque beatae ipsum harum, facere praesentium, tempora recusandae ut placeat corporis distinctio at expedita? Quae est eius, eligendi obcaecati ipsum impedit aperiam delectus doloribus aspernatur alias? Repellendus ut officiis porro dolore!</p>
-
-
+<a href="visit">visit</a> -->
+<div>
+  <ul>
+    <li>CSE 11</li>
+    <li>CSE 12</li>
+    <li>CSE 13</li>
+    <li>CSE 14</li>
+    <li>CSE 15</li>
+    <li>CSE 16</li>
+  </ul>
+</div>
 
 
 
